# MPR

./: .gitignore  README.md
zad1/: CMakeLists.txt  lat1n1.txt  lat1n2.txt  latmn1.txt  latmn2.txt  main.py  main_latency.c  main_throughput.c  tp1n1.txt  tp1n2.txt  tpmn1.txt  tpmn2.txt
zad2/: main.c  main.py  out.txt  out2.txt
zad3/: CMakeLists.txt  main.cpp  main.py  out.csv
zad4/: CMakeLists.txt  bucket.hpp  bucket_sort.hpp  buckets.hpp  fixed_size_dynamic_array.hpp  lockables.hpp  main.cpp  main.py  out_final.csv  parallel_for.cpp  parallel_for.hpp  parallel_max.hpp  parallel_primitives.cpp  parallel_primitives.hpp  range.hpp  schedule.cpp  schedule.hpp  test_parameters.hpp  time_it.hpp  value_range.hpp
zad6/: CMakeLists.txt  Cargo.toml  input.txt  main.cpp  mapper.cpp  out.txt  reducer.cpp  test.txt  test_reducer.txt
zad6/src/: main.rs
zad7/: CMakeLists.txt  vectorAdd.cu
zad8/: CMakeLists.txt  common.cpp  image_scaling_1.cu  img_scaling.txt  matrix_transpose_1.cu  scrImagePgmPpmPackage.cpp  scrImagePgmPpmPackage.hpp  transpose.txt  vectorAdd.cu
zad9/: CMakeLists.txt  readme.txt
zad9/2 Warp Divergence/: CMakeLists.txt
zad9/3 Loop Unrolling/: CMakeLists.txt
zad9/4 Atomic Operations/: CMakeLists.txt
zad9/5 Histogram/: histo.cu
zad9/common/: common.hpp
zad9/dane/: 1reduction_global.txt  1reduction_shared.txt  2warp_divergence_interleaving.txt  2warp_divergence_sequential.txt  3loop_unrolling_with_cooperative_grouping.txt  3loop_unrolling_without_cooperative_grouping.txt  4atomic_operations_block.txt  4atomic_operations_simplest.txt  4atomic_operations_warp.txt  5histo.txt  main.py
zad9/kod/1 Reduction/: CMakeLists.txt  reduction_global.cpp  reduction_shared.cpp
zad9/kod/2 Warp Divergence/: reduction.cpp
zad9/kod/3 Loop Unrolling/: reduction.cpp
zad9/kod/4 Atomic Operations/: reduction.cpp
zad9/kod/5 Histogram/: CMakeLists.txt  histo.cu  reduce.cu
zad9/kod/common/: CMakeLists.txt
